Incorrect RNA Path when trying to keyframe the nth vertex of Bezier curve shape key data #38013

Closed
opened 2014-01-01 12:10:00 +01:00 by Joshua Leung · 8 comments
Member

System Information
Windows 64-bit, OpenSuse (64-bit?)

Blender Version
Broken: ead6d397fd
Worked: (optional)

Short description of error
Incorrect RNA Paths are generated for shape key data elements on bezier curves when trying to keyframe these.

Exact steps for others to reproduce the error
See the following file from @zanqdo - Curve-ShapekeyDataPathBug.blend
Simply press enter in the python console

**System Information** Windows 64-bit, OpenSuse (64-bit?) **Blender Version** Broken: ead6d397fd Worked: (optional) **Short description of error** Incorrect RNA Paths are generated for shape key data elements on bezier curves when trying to keyframe these. **Exact steps for others to reproduce the error** See the following file from @zanqdo - [Curve-ShapekeyDataPathBug.blend](https://archive.blender.org/developer/F60077/Curve-ShapekeyDataPathBug.blend) Simply press enter in the python console
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung self-assigned this 2014-01-01 12:10:00 +01:00
Author
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Author
Member

NOTE: I'm just submitting this as a bug report here so that the reference test files for this are easily available online, should further problems with the fix for this that I've been working on.

Here's a second reference file Curve-ShapekeyDataPathBug-02.blend , containing several additional object types (each one has two shapekeys), and additional vertices added to the test curve (which helped pick up a bug in earlier fixes).

The Problem
key->elemsize is the wrong size for Bezier Curves. By default, it has a value of 16, which only works when dealing with nurbs curves/surfaces but not bezier curves. In various places, quite a bit of evil magic is performed to adjust elemsize and count of number of elements to work around the problems.

The Current Fix
Notably, for whatever reason, the "magic number" of 12 seems to be getting applied for the number of floats stored per bezier point in the shapekey, just like for the other data types (e.g. mesh and lattice). For now, when dealing with ShapeKeyBezierPoints instead of ShapeKeyPoints (i.e. the special type of point used for shape key data on Bezier curves), we use this special value instead.

NOTE: I'm just submitting this as a bug report here so that the reference test files for this are easily available online, should further problems with the fix for this that I've been working on. Here's a second reference file [Curve-ShapekeyDataPathBug-02.blend](https://archive.blender.org/developer/F60078/Curve-ShapekeyDataPathBug-02.blend) , containing several additional object types (each one has two shapekeys), and additional vertices added to the test curve (which helped pick up a bug in earlier fixes). **The Problem** key->elemsize is the wrong size for Bezier Curves. By default, it has a value of 16, which only works when dealing with nurbs curves/surfaces but not bezier curves. In various places, quite a bit of evil magic is performed to adjust elemsize and count of number of elements to work around the problems. **The Current Fix** Notably, for whatever reason, the "magic number" of 12 seems to be getting applied for the number of floats stored per bezier point in the shapekey, just like for the other data types (e.g. mesh and lattice). For now, when dealing with ShapeKeyBezierPoints instead of ShapeKeyPoints (i.e. the special type of point used for shape key data on Bezier curves), we use this special value instead.

This issue was referenced by blender/blender-addons-contrib@c8dd6b67b6

This issue was referenced by blender/blender-addons-contrib@c8dd6b67b6de00d4839d76d0cbffe3d187995cdc

This issue was referenced by c8dd6b67b6

This issue was referenced by c8dd6b67b6de00d4839d76d0cbffe3d187995cdc
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit c8dd6b67b6.

Closed by commit c8dd6b67b6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38013
No description provided.